Fix "Log in with Wikipedia" button vertical align

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -100,6 +100,7 @@ nav.top-nav
 .top-nav__login-links
   display flex
   justify-content flex-end
+  align-items: center
   margin-left auto
   b
     +below(desktop)
